--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ owner:
   google_plus:
 
 description: "A blog about tech (mostly)"
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: #twitter_username
 github_username:  allensuner
