--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ owner:
 
 description: "A blog about tech (mostly)"
 baseurl: # the subpath of your site, e.g. /blog
-url: allensuner.github.io
+url: # the url of your website
 twitter_username: #twitter_username
 github_username:  allensuner
 
