update facebook link

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ owner:
   email:          allensuner@gmail.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
-  facebook: "allen.suner.9"
+  facebook: "allen.suner"
   github: "allensuner"
   stackexchange:  
   linkedin: "allen-suner"   
